docs: fixed sidebar issue: made sidebar full height, fixed double scroll with toggle body overflow on and off

--- a/app/styles/app.css
+++ b/app/styles/app.css
@@ -83,10 +83,6 @@
     display: none;
   }
 
-  #docs-details[open] > summary + * {
-    height: 80vh;
-  }
-
   .anchor-heading {
     text-decoration: none !important;
   }
